# service-starters

./: README.md
scripts/: add_build_image_arg.py  build_all.sh  copy_dockerfiles.py  create_services.py  fix_dockerfiles.py  fix_dockerfiles2.py  fix_dockerfiles3.py  generate_service_templates.py  generate_services.py
services/: README.md
services/01-angular-ssr/: .env.example  Dockerfile  angular.json  package.json  tsconfig.app.json  tsconfig.json
services/01-nextjs/: .env.example  Dockerfile  next.config.ts  package.json
services/01-nuxt/: .env.example  Dockerfile  app.vue  nuxt.config.ts  package.json
services/01-remix/: .env.example  Dockerfile  package.json  vite.config.ts
services/01-solid-start/: Dockerfile  app.config.ts  package.json  tsconfig.json
services/01-sveltekit/: .env.example  Dockerfile  package.json  svelte.config.js  vite.config.ts
services/02-angular/: .env.example  Dockerfile  angular.json  package.json
services/02-lit/: Dockerfile  index.html  package.json  tsconfig.json
services/02-preact/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
services/02-react/: .env.example  Dockerfile  index.html  package.json
services/02-solidjs/: .env.example  Dockerfile  index.html  package.json
services/02-svelte/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
services/02-vue/: .env.example  Dockerfile  index.html  package.json
services/03-astro/: .env.example  Dockerfile  index.html  package.json
services/03-eleventy/: .eleventy.js  .env.example  Dockerfile  package.json
services/03-gatsby/: .env.example  .gitignore  Dockerfile  package.json
services/03-hugo/: .env.example  .gitignore  Dockerfile  hugo.toml
services/04-astro/: .env.example  Dockerfile  astro.config.mjs  package.json
services/04-fresh/: .env.example  Dockerfile  deno.json
services/05-qwik/: .env.example  Dockerfile  package.json  tsconfig.json  vite.config.ts
services/06-hono-edge/: .env.example  README.md
services/06-nextjs-edge/: .env.example  README.md
services/06-remix-cloudflare/: .env.example  README.md
services/07-nextjs-app-router/: .env.example  (+2 more)
services/20-actix-web/: .env.example  Cargo.toml  Dockerfile
services/20-actix-web/.github/workflows/: 01-pre-commit.yml  02-security-gates.yml  03-build-pr.yml  04-build-push-sign.yml  05-test.yml  06-release.yml  07-notify.yml
services/20-actix-web/src/: main.rs
services/20-axum/: .env.example  .gitignore  Cargo.toml  Dockerfile
services/20-axum/.github/workflows/: 01-pre-commit.yml  02-security-gates.yml  03-build-pr.yml  04-build-push-sign.yml  05-test.yml  06-release.yml  07-notify.yml
services/20-axum/src/: main.rs
services/27-crow/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  main.cc
services/27-crow/.github/workflows/: 01-pre-commit.yml  02-security-gates.yml  03-build-pr.yml  04-build-push-sign.yml  05-test.yml  06-release.yml  07-notify.yml
services/27-crow/tests/: health_test.cc
services/27-drogon/: .env.example  CMakeLists.txt  Dockerfile  main.cc
services/27-drogon/.github/workflows/: 01-pre-commit.yml  02-security-gates.yml  03-build-pr.yml  04-build-push-sign.yml  05-test.yml  06-release.yml  07-notify.yml
services/27-drogon/tests/: health_test.cc
(+903 files in other folders)
