[package]
name = "20-actix-web"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
dotenvy = "0.15"

[dev-dependencies]
actix-web = { version = "4.9", features = ["macros"] }
