[package]
name = "20-axum"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
tower = "0.5"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["macros"] }
